# data_fetching

./: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt
config/: config.ini  config.py  constant.py  constant_an.py
dump_all_hist/: create_node.py  main.py  static.py  update_node.py
dump_all_hist/content/: clip.py  episode.py  extra.py  program.py  relationship.py
dump_all_hist/user/: anonymous_user.py  anonymous_viewed.py  common.py  customer_ids_in_network.py  has_preference.py  register_viewed.py  update_user_cluster.py  user.py  user_cluster.py  viewed.py
example/: bulk_content_redis.py  bulk_customer_redis.py  download_ubd.py  export_bulk_content.py  export_bulk_user.py  export_mongo.py  export_ubd.py  parser_data.py  sample_bulk_redis.py  sample_mongo.py  sample_redis.py  upload_ubd.py
export_data/: export_bulk_content.py  export_bulk_user.py  export_mongo.py  export_ubd.py  main.py  sample_mongo.py  sample_redis.py
testing_scripts/: content_testing.py
utils/: logger.py  s3_service.py
utils/service/: __init__.py  rest.py
