[tool.poetry]
name = "data-fetching"
version = "0.0.2"
description = ""
authors = ["AIML Team"]
readme = "README.md"
license="MIT"
classifiers=[
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[[tool.poetry.source]]
name = "mnc"
url  = "http://pypi-server-540014151.ap-southeast-1.elb.amazonaws.com"
secondary = true

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
# private packages
rplus-constants-module = ">=0.2.12"
rplus-utils-module = ">=0.2.4"
rplus-ingestor-module =">=0.0.6"
# public packages
pandas = "^1.5.1"
pymongo = "^4.3.2"
redis = "^4.3.4"
python-dotenv = "^0.19.0"
requests = "^2.28.2"
pydantic = "^1.10.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
